--- a/admin/templates/stat.html
+++ b/admin/templates/stat.html
@@ -4,7 +4,7 @@
 <h1>Статистика регистраций на {{event[1]}} - {{event[2]}}</h1>
 
 <span>Количество зарегистрировавшихся на событие: {{count}}</span>
-<form action="/check" method="post">
+<form action="/admin/check" method="post">
 <input type="hidden" name="event" value="{{event[0]}}">
 <table>
 	<thead>
