--- a/admin/templates/admn.html
+++ b/admin/templates/admn.html
@@ -3,7 +3,7 @@
 {%block body%}
 <h1>Панель администратора</h1>
 <div><a href="/admin/allusers">Управление пользователями</a></div>
-<div><a href="/event">Управление событиями</a></div>
+<div><a href="/admin/event">Управление событиями</a></div>
 <div><a href="/неттакойстраницы">Опубликовать новость</a></div>
 <footer></footer>
 {%endblock%}
