--- a/admin/templates/allusers.html
+++ b/admin/templates/allusers.html
@@ -9,7 +9,7 @@
 	</thead>
 	{%for pers in persons%}
 	<tr>
-	<td>{{pers[1]}}</td><td>{{pers[2]}}</td><td>{{pers[3]}}</td><td>{{pers[4]}}</td><td>{{pers[5]}}</td><td>{{pers[6]}}</td><td>{{pers[7]}}</td><td>{{pers[8]}}</td><td>{{pers[9]}}</td><td>{{pers[10]}}</td><td>visited</td><td>not_visited</td><td><a href="/deluser?idu={{pers[0]}}">удалить</a></td>
+	<td>{{pers[1]}}</td><td>{{pers[2]}}</td><td>{{pers[3]}}</td><td>{{pers[4]}}</td><td>{{pers[5]}}</td><td>{{pers[6]}}</td><td>{{pers[7]}}</td><td>{{pers[8]}}</td><td>{{pers[9]}}</td><td>{{pers[10]}}</td><td>visited</td><td>not_visited</td><td><a href="/admin/deluser?idu={{pers[0]}}">удалить</a></td>
 	</tr>
 	{%endfor%}
 </table>
