css bootstrap start

--- a/admin/templates/event.html
+++ b/admin/templates/event.html
@@ -1,4 +1,4 @@
-{%extends "basic.html"%}
+{%extends "basicadm.html"%}
 {%block title%}Легион-События{%endblock%}
 {%block body%}
 <h1>Все события</h1>
