--- a/admin/templates/stat.html
+++ b/admin/templates/stat.html
@@ -1,4 +1,4 @@
-{%extends "basic.html"%}
+{%extends "basicadm.html"%}
 {%block title%}Легион-Статистика регистраций{%endblock%}
 {%block body%}
 <h1>Статистика регистраций на {{event[1]}} - {{event[2]}}</h1>
