--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,12 @@
 <h1>Главная страница</h1>
 <div><a href="/person">Регистрация нового волонтера</a></div>
 <div><a href="/login">Вход в личный волонтера</a></div>
-<div>Трансляция Новостей</div>
+<h2>Новости</h2>
+<div class="news">
+    {% for n in news %}
+        <div class="titlenews">{{n[2]}}</div>
+        <div class="datenews">{{n[1]}}</div>
+        <div class="bodynews">{{n[3]}}</div>
+    {% endfor %}
+</div>
 {%endblock%}
