--- a/admin/templates/admn.html
+++ b/admin/templates/admn.html
@@ -1,9 +1,9 @@
-{%extends "basic.html"%}
+{%extends "basicadm.html"%}
 {%block title%}Легион-Администратор{%endblock%}
 {%block body%}
 <h1>Панель администратора</h1>
 <div><a href="/admin/allusers">Управление пользователями</a></div>
 <div><a href="/admin/event">Управление событиями</a></div>
-<div><a href="/неттакойстраницы">Опубликовать новость</a></div>
+<div><a href="/admin/post">Опубликовать новость</a></div>
 <footer></footer>
 {%endblock%}
