--- a/admin/templates/allusers.html
+++ b/admin/templates/allusers.html
@@ -1,4 +1,4 @@
-{%extends "basic.html"%}
+{%extends "basicadm.html"%}
 {%block title%}Легион-Пользователи{%endblock%}
 {%block body%}
 <h1>Все пользователи</h1>
