--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>{%block title%}{%endblock%}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    
+    <title>{%block title%}{%endblock%}</title>
 </head>
 <body>
 <div class="menu"><a href = "/">Главная</a></menu>
