--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,11 +1,23 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>{%block title%}{%endblock%}</title>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="menu"><a href = "/">Главная</a></menu>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9"><a href="/">Главная</a></div>
+            <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Вход</a> | <a href="/unlogin">Выход</a></div>
+        </div>
+        <div class="exter">
+            <h1 class="logo">Legion</h1>
+            <img src="/static/image/legion7.png" />
+        </div>
+    </div>
 {%block body%}{%endblock%}
 <footer></footer>
 </body>
