--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,13 @@
 {%extends "basic.html"%}
 {%block title%}Легион-Вход{%endblock%}
 {%block body%}
-<h1>Вход в личный кабинет</h1>
-<form action="/cabinetin" method="post">
-<p>Логин: <input type="text" name="login"/></p>
-<p>Пароль: <input type="text" name="password"/></p>
-<p><input type="submit" value="Войти"/></p>
-</form>
-{%endblock%}
+
+<div class="container w-50 p-3 border rounded-lg">
+    <h3 class="mb-4">Вход в личный кабинет</h3>
+    <form action="/cabinetin" method="post">
+        <p class="row"><label class="col-4">Логин: </label><input class="col-7" type="text" name="login" /></p>
+        <p class="row"><label class="col-4">Пароль: </label><input class="col-7" type="text" name="password" /></p>
+        <p class="text-right m-0"><input class="mr-4" type="submit" value="Войти" /></p>
+    </form>
+</div>
+    {%endblock%}
