--- a/admin/templates/event.html
+++ b/admin/templates/event.html
@@ -1,24 +1,12 @@
 {%extends "basicadm.html"%}
 {%block title%}Легион-События{%endblock%}
 {%block body%}
-<h1>Все события</h1>
-
-<div class="table">
-<table>
-	<thead>
-	<th>Событие</th><th>Активность/Предмет</th><th>Дата</th><th>Редактировать</th><th>Статистика</th>
-	</thead>
-	{%for evt in events%}
-	<tr>
-	<td>{{evt[1]}}</td><td>{{evt[2]}}</td><td>{{evt[3]}}</td><td><a href="/admin/deletevt/{{evt[0]}}">удалить<a></td><td><a href="/admin/stat/{{evt[0]}}">статистика регистраций<a></td>
-	</tr>
-	{%endfor%}
-</table>
-</div>
-
+<div class="m-3 p-3 border rounded-lg">
+    
+<h3 class="m-2">Создать событие</h3>
 <div class="addform">
 <form action="/admin/eventadd" method="post">
-<table>
+<table class="m-auto">
 	<thead>
 	<th>Событие</th><th>Активность/Предмет</th><th>Дата</th>
 	</thead>
@@ -32,9 +20,28 @@
 		<td>
 			<input type="text" name="date" />
 		</td>
+        <td>
+            <input type="submit" value="Создать" />
+		</td>
 	</tr>
 </table>
-<input type="submit" value="Создать событие" />
+
 </form>
+<div />
+<h2 class="m-2">Все события:</h2>
+<div class="table">
+<table class="table table-striped m-auto">
+	<thead>
+	<th>Событие</th><th>Активность/Предмет</th><th>Дата</th><th>Редактировать</th><th>Статистика</th>
+	</thead>
+	{%for evt in events%}
+	<tr>
+	<td>{{evt[1]}}</td><td>{{evt[2]}}</td><td>{{evt[3]}}</td><td><a href="/admin/deletevt/{{evt[0]}}">удалить<a></td><td><a href="/admin/stat/{{evt[0]}}">статистика регистраций<a></td>
+	</tr>
+	{%endfor%}
+</table>
+</div>
+</div>
+
 </div>
 {%endblock%}
