--- a/admin/templates/posts.html
+++ b/admin/templates/posts.html
@@ -1,11 +1,16 @@
 {%extends "basicadm.html"%}
 {%block title%}Легион-Администратор{%endblock%}
 {%block body%}
-<h1>Опубликовать новость</h1>
+
+<div class="container p-3 border rounded-lg">
+    
+<h2 class="m-2">Опубликовать новость</h2>
 <form action="{{url_for('administrator.addpost')}}" method="post">
-    <p><input type="text" name="titlepost" /></p>
-    <p><textarea name="bodypost"></textarea></p>
-    <p><input type="submit" value="Опубликовать" /></p>
+    <p class="row"><label class="col-2">Заголовок: </label><input class="col-9" type="text" name="titlepost" /></p>
+    <p class="row"><label class="col-2">Новость: </label><textarea class="col-9" name="bodypost"></textarea></p>
+    <p class="text-right"><input type="submit" value="Опубликовать" /></p>
 </form>
+
+</div>
 <footer></footer>
 {%endblock%}
