--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -1,16 +1,18 @@
 {%extends "basic.html"%}
 {%block title%}Легион-Главная{%endblock%}
 {%block body%}
-<h1>Личный кабинет</h1>
+<div class="container p-3 border rounded-lg">
+    <h3 class="mb-4">Личный кабинет</h3>
 
-<div>Здравствуйте, {{volonteer[1]}} {{volonteer[2]}} {{volonteer[3]}}</div>
+    <div class="name bg-dark text-light p-2">Здравствуйте, {{volonteer[1]}} {{volonteer[2]}} {{volonteer[3]}}</div>
 
-<div class="rule_menu">
-<a href="/cabinet/nextevt">Предстоящие события доступные для регистрации</a>
-<a href="/cabinet/regevt">Предстоящие события на которые зарегистрирован</a>
-<a href="/cabinet/lastevt">События в которых принял участие</a>
+    <div class="rule_menu m-2">
+        <a href="/cabinet/nextevt">Предстоящие события доступные для регистрации</a> | 
+        <a href="/cabinet/regevt">Предстоящие события на которые зарегистрирован</a> | 
+        <a href="/cabinet/lastevt">События в которых принял участие</a>
+    </div>
+    <div class="content">
+        {{content|safe}}
+    </div>
 </div>
-<div class="content">
-{{content|safe}}
-</div>
-{%endblock%}
+    {%endblock%}
