check form, checkcode and send_file

--- a/admin/templates/admn.html
+++ b/admin/templates/admn.html
@@ -3,9 +3,10 @@
 {%block body%}
 <div class="container p-3 border rounded-lg">
     <h2 class="m-2">Панель администратора</h2>
-        <div><a href="/admin/allusers">Управление пользователями</a></div>
-        <div><a href="/admin/event">Управление событиями</a></div>
-        <div><a href="/admin/post">Опубликовать новость</a></div>
+    <div><a href="/admin/allusers">Управление пользователями</a></div>
+    <div><a href="/admin/event">Управление событиями</a></div>
+    <div><a href="/admin/getdata">Выгрузить данные</a></div>
+    <div><a href="/admin/post">Опубликовать новость</a></div>
 </div>
         <footer></footer>
         {%endblock%}
