--- a/admin/templates/allusers.html
+++ b/admin/templates/allusers.html
@@ -6,7 +6,7 @@
 
 <table class="table table-striped m-auto">
 	<thead>
-        <th>Фамилия</th><th>Имя</th><th>Отчество</th><th>Факультет</th><th>e-mail</th><th>Телефон</th><th>Дата рождения</th><th>Логин</th><th>Пароль</th><th>Дата регистрации</th><th>Посещено</th><th>Не посещено</th><th></th>
+        <th>Фамилия</th><th>Имя</th><th>Отчество</th><th>Факультет</th><th>e-mail</th><th>Телефон</th><th>Дата рождения</th><th>Логин</th><th>Пароль</th><th>Дата регистрации</th><th>Посещено<!--Сколько мероприятий посещено всего--></th><th>Не посещено<!--На сколько зарегистрировался но при этом не посетил--></th><th></th>
 	</thead>
 	{%for pers in persons%}
 	<tr>
