modified personadd.html, tableDB temp_user and person, script.js

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -15,8 +15,8 @@
             <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Вход</a> | <a href="/unlogin">Выход</a></div>
         </div>
         <div class="exter">
-            <h1 class="logo">Legion</h1>
-            <img src="/static/image/legion7.png" />
+            <h1 class="logo">Волонтерство на олимпиадах и конкурсах</h1>
+            <img src="/static/image/v2019.png" width="900px">
         </div>
     </div>
 {%block body%}{%endblock%}
