--- a/static/css/styleOLD.css
+++ b/static/css/styleOLD.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Beckett;
-    src: url(/static/font/whirl.ttf);
+    src: url(/static/font/beckett.ttf);    
 }
 
 .top{
@@ -27,7 +27,9 @@
 
 .logo {
     font-family: Beckett;
-    font-size: 200%;	
-	color: #ee7501;
+    font-size: 500%;
+    z-index: 1;
+    position: absolute;
+    top: 5px;
 }
    
