add address in table event BD, add address on page registration, sort list volunteer on page stat.html

--- a/admin/templates/event_add_html.html
+++ b/admin/templates/event_add_html.html
@@ -44,13 +44,7 @@
             <td>
                 <input type="text" name="duration" />
             </td>
-        </tr>
-        <tr>
-            <td>Адрес проведения</td>
-            <td>
-                <input type="text" name="address" />
-            </td>
-        </tr>
+        </tr>        
         <tr>
             <td>Минимальное количество в штаб</td>
             <td>
@@ -73,6 +67,12 @@
             <td>Максимальное количество в аудиторию</td>
             <td>
                 <input type="text" name="classroom_max" />
+            </td>
+        </tr>
+        <tr>
+            <td>Адресс проведения</td>
+            <td>
+                <input type="text" name="address" />
             </td>
         </tr>
         <tr colspan="2">
