add reports alluser, someevents, userregisteronevent; format date 2020-12-15

--- a/admin/templates/allusers.html
+++ b/admin/templates/allusers.html
@@ -2,7 +2,7 @@
 {%block title%}Легион-Пользователи{%endblock%}
 {%block body%}
 <div class="m-3 p-3 border rounded-lg">
-    <h2 class="m-2">Все пользователи</h2>
+    <h2 class="m-2">Все пользователи</h2><a href="/admin/getallusers">выгрузить всех пользователей</a>
 
 <table class="table table-striped m-auto">
 	<thead>
