--- a/admin/templates/event_add_html.html
+++ b/admin/templates/event_add_html.html
@@ -24,7 +24,7 @@
         <tr>
             <td>Дата</td>
             <td>
-                <input type="text" name="date" />
+                <input type="date" name="date" />
             </td>
         </tr>
         <tr>
