--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -8,7 +8,7 @@
         <p class="row"><label class="col-4">Фамилия: </label><input class="col-7" type="text" name="surname" /></p>
         <p class="row"><label class="col-4">Имя: </label><input class="col-7" type="text" name="name" /></p>
         <p class="row"><label class="col-4">Отчество: </label><input class="col-7" type="text" name="patronymic" /></p>
-        <p class="row"><label class="col-4">Дата рождения: </label><input class="col-7" type="text" name="birthday" /></p>
+        <p class="row"><label class="col-4">Дата рождения: </label><input class="col-7" type="date" name="birthday" /></p>
         <!--Изменения Старт-->
         <p class="row">
             <label class="col-4">Пол: </label>
