--- a/admin/templates/stat.html
+++ b/admin/templates/stat.html
@@ -7,6 +7,7 @@
 
 <div class="text-danger">Количество зарегистрировавшихся в Штаб: {{x_staff}}</div>
 <div class="text-danger">Количество зарегистрировавшихся в Аудитории: {{x_classroom}}</div>
+    <a href="/admin/getuserregistronevent/{{id_evt}}">Выгрузить список зарегистрировавшихся</a>
 <form action="/admin/check" method="post">
 <input type="hidden" name="event" value="{{event[0]}}">
 <table class="table table-striped m-auto">
