--- a/templates/login.html
+++ b/templates/login.html
@@ -9,5 +9,6 @@
         <p class="row"><label class="col-4">Пароль: </label><input class="col-7" type="text" name="password" /></p>
         <p class="text-right m-0"><input class="mr-4" type="submit" value="Войти" /></p>
     </form>
+    <a href="/recovery">Забыли пароль?</a>
 </div>
     {%endblock%}
