--- a/admin/templates/allusers.html
+++ b/admin/templates/allusers.html
@@ -6,11 +6,11 @@
 
 <table class="table table-striped m-auto">
 	<thead>
-        <th>Фамилия</th><th>Имя</th><th>Отчество</th><th>Факультет</th><th>e-mail</th><th>Телефон</th><th>Дата рождения</th><th>Логин</th><th>Пароль</th><th>Дата регистрации</th><th>Посещено<!--Сколько мероприятий посещено всего--></th><th>Не посещено<!--На сколько зарегистрировался но при этом не посетил--></th><th></th>
+        <th>Фамилия</th><th>Имя</th><th>Отчество</th><th>Факультет</th><th>e-mail</th><th>Телефон</th><th>Дата рождения</th><th>Логин</th><th>Пароль</th><th>Дата регистрации</th><th>Зарегистрировался</th><th>Посетил</th><th></th>
 	</thead>
 	{%for pers in persons%}
 	<tr>
-	<td>{{pers[1]}}</td><td>{{pers[2]}}</td><td>{{pers[3]}}</td><td>{{pers[4]}}</td><td>{{pers[5]}}</td><td>{{pers[6]}}</td><td>{{pers[7]}}</td><td>{{pers[8]}}</td><td>{{pers[9]}}</td><td>{{pers[10]}}</td><td>visited</td><td>not_visited</td><td><a href="/admin/deluser?idu={{pers[0]}}">удалить</a></td>
+	<td>{{pers[1]}}</td><td>{{pers[2]}}</td><td>{{pers[3]}}</td><td>{{pers[4]}}</td><td>{{pers[5]}}</td><td>{{pers[6]}}</td><td>{{pers[7]}}</td><td>{{pers[8]}}</td><td>{{pers[9]}}</td><td>{{pers[10]}}</td><td>{{pers[13]}}</td><td>{{pers[14]}}</td><td><a href="/admin/deluser?idu={{pers[0]}}">удалить</a></td>
 	</tr>
 	{%endfor%}
 </table>
