add faculty edit, delete confirm on button

--- a/admin/templates/admn.html
+++ b/admin/templates/admn.html
@@ -11,7 +11,7 @@
         <div><a href="/admin/getdata">Выгрузить список зарегистрированных на все события</a></div>
         <div><form action="/admin/getdata" method="post">Выгрузить события за период с <input name="since" type="date" /> по <input name="to" type="date" /> <input type="submit" value="Пуск" /></form></div>
     </div>
-    
+    <div><a href="/admin/faculty">Факультеты</a></div>
     <div><a href="/admin/post">Опубликовать новость</a></div>
 </div>
         <footer></footer>
