--- a/admin/templates/basicadm.html
+++ b/admin/templates/basicadm.html
@@ -5,21 +5,8 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/static/js/confirm.js"></script>
     <title>{%block title%}{%endblock%}</title>
-    <style>
-        .hide{
-            display: none;
-        }
-        .hide + label{
-            color: blue;
-        }
-        .hide+label~div{
-            display: none;
-        }
-        .hide:checked + label ~ div {
-            display: block;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
