--- a/admin/templates/post_recovery.html
+++ b/admin/templates/post_recovery.html
@@ -10,24 +10,24 @@
     <p class="row">
         <label class="col-2">Тип: </label>
         {% if new[4]=='student' %}
-        <label class="col-2">Обший </label><input class="col-1" type="radio" name="type" value="common" />
-        <label class="col-2">Школьная </label><input class="col-1" type="radio" name="type" value="school" />
-        <label class="col-2">Студенческая </label><input class="col-1" type="radio" name="type" value="student" checked="checked" />
+            <span class="col-3"><label>Обший</label> <input type="radio" name="type" value="common" /></span>
+            <span class="col-3"><label>Школьная</label> <input type="radio" name="type" value="school" /></span>
+            <span class="col-3"><label>Студенческая</label> <input type="radio" name="type" value="student" checked="checked" /></span>
         {% elif new[4]=='school' %}
-        <label class="col-2">Обший </label><input class="col-1" type="radio" name="type" value="common" />
-        <label class="col-2">Школьная </label><input class="col-1" type="radio" name="type" value="school" checked="checked" />
-        <label class="col-2">Студенческая </label><input class="col-1" type="radio" name="type" value="student" />
+            <span class="col-3"><label>Обший</label> <input type="radio" name="type" value="common" /></span>
+            <span class="col-3"><label>Школьная</label> <input type="radio" name="type" value="school" checked="checked" /></span>
+            <span class="col-3"><label>Студенческая</label> <input type="radio" name="type" value="student" /></span>
         {% else %}
-        <label class="col-2">Обший </label><input class="col-1" type="radio" name="type" value="common" checked="checked" />
-        <label class="col-2">Школьная </label><input class="col-1" type="radio" name="type" value="school" />
-        <label class="col-2">Студенческая </label><input class="col-1" type="radio" name="type" value="student" />
+            <span class="col-3"><label>Обший</label> <input type="radio" name="type" value="common" checked="checked" /></span>
+            <span class="col-3"><label>Школьная</label> <input type="radio" name="type" value="school" /></span>
+            <span class="col-3"><label>Студенческая</label> <input type="radio" name="type" value="student" /></span>
         {% endif %}
 
     </p>
     <p class="row"><label class="col-2">Дата публикации: </label><input class="col-9" type="text" name="date" value="{{new[1]}}" /></p>
     <p class="row"><label class="col-2">Заголовок: </label><input class="col-9" type="text" name="titlepost" value="{{new[2]}}" /></p>
     <p class="row"><label class="col-2">Новость: </label><textarea class="col-9" name="bodypost">{{new[3]}}</textarea></p>
-    <p class="text-right"><input type="submit" value="Изменить" /></p>
+    <p class="text-right"><input type="submit" value="Редактировать" /> <button onclick="document.location.href = '/admin/post'">Отменить</button></p>
 </form>
 
 </div>
