--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,21 @@
 <h2 class="m-2">Новости</h2>
 <div class="news">
     {% for n in news %}
-    <div class="border rounded-right m-2 p-2">
-        <h3 class="titlenews">{{n[2]}}</h3>
+    <div class="media border rounded-right m-2 p-2">        <!---->
         <div>
             {% if (n[4]=='school') %}
-                <img src="/static/image/for_new/sch.png" />
+            <img src="/static/image/for_new/sch.png" />
             {% elif (n[4] == 'student') %}
-                <img src="/static/image/for_new/st.jpg" />
+            <img src="/static/image/for_new/st.jpg" />
             {% else %}
-                <img src="/static/image/for_new/com.png" />
+            <img src="/static/image/for_new/com.png" />
             {% endif %}
         </div>
-        <div class="datenews small">{{n[1]}}</div>
-        <div class="bodynews">{{n[3]}}</div>
+        <div class="media-body ml-3">
+            <h3 class="titlenews">{{n[2]}}</h3>
+            <div class="datenews small">{{n[1]}}</div>
+            <div class="bodynews">{{n[3]}}</div>
+        </div>        
     </div>
     {% endfor %}
 </div>
