--- a/user/templates/basicus.html
+++ b/user/templates/basicus.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-9"><a href="/">Главная</a></div>
-            <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Личный кабинет</a></div>
+            <div class="col-md-3 text-right"><a href="/unlogin">Выход</a></div>
         </div>
         <div class="exter">
             <h1 class="logo">Волонтерство на олимпиадах и конкурсах</h1>
