--- a/user/templates/registration_view.html
+++ b/user/templates/registration_view.html
@@ -1,10 +1,10 @@
-{%extends "basic.html"%}
+{%extends "basicus.html"%}
 {%block title%}Регистрация на мероприятие{%endblock%}
 {%block body%}
 <div class="container w-50 p-3 border rounded-lg">
     <h3 class="mb-4">Регистрация на мероприятие</h3>
     <div class="name bg-dark text-light p-2">{{volonteer[1]}} {{volonteer[2]}} {{volonteer[3]}}, вы регистрируетесь на следующее мероприятие:</div>
-    <form action="/registration" method="post">
+    <form action="/us/registration" method="post">
         <input type="hidden" name="id_evt" value="{{event[0]}}" />
         <p class="row"><label class="col-4">Событие: </label><span class="col-7">{{event[1]}}</span></p>
         <p class="row"><label class="col-4">Активность: </label><span class="col-7">{{event[2]}}</span></p>
@@ -16,7 +16,7 @@
         <p class="row"><label class="col-4">В штаб: </label><span class="col-7">Зарегистрировано: {{num_staff}}/Min: {{event[7]}}/Max: {{event[8]}}</span></p>
         <p class="row"><label class="col-4">В аудиторию: </label><span class="col-7">Зарегистрировано: {{num_classroom}}/Min: {{event[9]}}/Max: {{event[10]}}</span></p>
         <p class="row"><label class="col-4">Выберите роль: </label><select class="col-7" name="role"><option>штаб</option><option>аудитория</option></select></p>
-        <p class="text-right m-0"><input class="mr-4" type="submit" value="Зарегистрироваться" /><input class="mr-4" type="button" value="Отменить" onclick="location.href='{{url_for('cabinet', action='1')}}'" /></p>
+        <p class="text-right m-0"><input class="mr-4" type="submit" value="Зарегистрироваться" /><input class="mr-4" type="button" value="Отменить" onclick="location.href='{{url_for('user.cabinet', action='1')}}'" /></p>
     </form>
 </div>
     {%endblock%}
